cf_analysis_results/checkerframework_results/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8.txt
../../../../datasets/june2020_dataset/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/MainEntry.java:399: error: (required.method.not.called) $$ 4 $$ method close $$ f $$ java.io.FileReader $$ possible exceptional exit due to r.readLine() with exception type java.io.IOException $$ ( 10877, 10923 ) $$ @MustCall method close may not have been invoked on f or any of its aliases.
       f = new FileReader( new File("./sample.dat") );
         ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to r.readLine() with exception type java.io.IOException
Note: ../../../../datasets/june2020_dataset/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/MainEntry.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
